@@ -1,6 +1,16 @@
 # ChangeLog for dev-java/javacc
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/javacc/ChangeLog,v 1.32 2010/03/21 15:32:57 phajdan.jr Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/javacc/ChangeLog,v 1.35 2011/08/12 16:02:22 xarthisius Exp $
+
+  12 Aug 2011; Kacper Kowalik <xarthisius@gentoo.org> javacc-4.0-r4.ebuild:
+  ppc64 stable wrt #355085
+
+  20 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org> javacc-4.2.ebuild:
+  Marked ~ppc64 wrt #355353
+
+  29 Jan 2011; Miroslav Šulc <fordfrog@gentoo.org> javacc-5.0.ebuild:
+  Did some fixes with regard to jdk version in the ebuild, but it still fails
+  tests
 
   21 Mar 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> javacc-4.2.ebuild:
   x86 stable wrt bug #309265
